# crush-modules

./: .gitignore  .goreleaser.yaml  AGENTS.md  EVENT_LOG_SYNC.md  README.md  RELEASE.md  SESSION_PORTABILITY_PATTERNS.md  Taskfile.yaml  go.mod  go.sum  go.work  go.work.sum
a2a/: README.md  a2a_e2e_test.go  client.go  client_test.go  go.mod  go.sum  retention_store.go  retention_store_test.go  server.go  server_test.go  taskstore.go  taskstore_test.go  tool.go  tool_test.go  types.go  types_test.go
acp/: CLIENT_SPEC.md  README.md  acp_e2e_test.go  client.go  client_test.go  go.mod  go.sum  runstore.go  runstore_test.go  server.go  server_test.go  sse.go  sse_test.go  stream.go  stream_test.go  tool.go  tool_test.go  types.go  types_test.go
agent-status/: agent_status.go  agent_status_e2e_test.go  agent_status_test.go  go.mod  go.sum
docs/: COMPLETE_SETUP.md  GORELEASER.md  QUICK_REFERENCE.md  SETUP.md
kuri/: browser.go  browser_test.go  fetch.go  fetch_test.go  go.mod  go.sum  kuri.go
otlp/: go.mod  go.sum  otlp.go  otlp_e2e_test.go  otlp_test.go
periodic-prompts/: dialog.go  go.mod  go.sum  periodic_prompts.go  periodic_prompts_e2e_test.go  periodic_prompts_test.go  tool.go
ping/: go.mod  go.sum  ping.go  ping_e2e_test.go  ping_test.go
scripts/: build-and-install-crush-a2a.sh  prebuild.sh  (+1 more)
sdks/python/: pyproject.toml
sdks/python/src/crush_acp_sdk/: __init__.py  client.py  stream.py  types.py
sdks/python/tests/: test_client.py  test_stream.py  test_types.py
sdks/rust/: Cargo.toml
sdks/rust/src/: client.rs
sdks/rust/tests/: integration.rs
(+59 files in other folders)
