[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "crush-acp-sdk"
version = "0.1.0"
description = "Python client SDK for the Crush Agent Communication Protocol (ACP)"
license = "MIT"
requires-python = ">=3.10"
dependencies = ["httpx>=0.27"]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-httpserver>=1.1", "pytest-asyncio>=0.25"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
